--- a/Launcher/Forms/MainForm.resx
+++ b/Launcher/Forms/MainForm.resx
@@ -121,35 +121,43 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox_Main.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGkAAAArCAYAAAB7EqZdAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EwAACxMBAJqcGAAABcVJREFUeF7tXN1PFFccHVZ2C9XFjxUChERaIUHfeDE++CIkJoSEB4EQUMFY02j4
-        LA0JiYkGE+wjvCjQag0v/Ak88b24CC+I8cGkBlCB2tIiKxAsBW7PGe4iuAMs4i7XXk5ydub3m92Zu3Pm
-        fv/uGEKITybwLfgd+AvoBsfBaZAH56TdZ7PZ7mP7PZhkdZ49bk5L52YEDoE/gIOxsbGioKBANDY2is7O
-        TjE+Pi6mp6fxNSHm5ubE2NiYcLvdoqmpSRQWFor4+HieYAj8ETzsO+ceN6el04rAAbA2PDzce/HiRdHW
-        1iaWlpZwKHDw+xTt0qVLIiIiwutyuWpPnjx5AIcsrxlMbgWr31gxEHz0fTt4UG4Dw9oTbEQgOywsbJy5
-        YXh4GK6d4+XLl+LKlSsCReEEk6Epl8E+MBJ0gGGgP3C/NiQQAT5ITk42c0AwMDAwIFJSUoTdbv8Z5vyK
-        9/+PqampoRMnTozg/jbxPsNlqQFp6SQB1j0958+fF16vF67gYWZmRuTl5YmMjIyh5eXllUpNA+C/vrt+
-        /Xof/zfu9YZ1tLXTMFzgYGlp6bbrnU8FEiwqKyvFmTNnnmN/Srq1wN27d7tOnTr1nPcdpr8efo6VIu5x
-        cXExzNCjrKxMpKenP8OuNkUfUVdX13327NlnuPeRMNdr4ucwjIbc3Fzzyd4N8LosYmtqaoJTCSqMkpIS
-        D+7/A+yu12SdgVbc8ePHV/s6uwVen+l48eJFn3RpAdZRaEyMQoccmP4iAVFoZv/e09MDc/fBdBw7dmyS
-        CZcuLcBWX2xs7J/UA6afSLVFRUXYVQcczWhubu6Upja4ceMGh9hqsftBJOCQw+GYZgdTJYyOjoqYmBgv
-        cpM2zXJicXFxAv/7L+oCc1WkSg71qIgLFy5wCKpLmtqgurq6F7pUYHdVpMGOjg7zoGpob283+07S1AaT
-        k5OD1AW71Mf4Ji4uLmSd1u0CWV8cOXJELCwsvJIuXbAUHx//BvpwOsi4yiJFZbAoHhgYUKPZGUJUVVWx
-        yLtKke43NDRIt5qor68Xd+7c0U6k/v7+HupDkdzd3d3SrSa6urrEuXPnnkpTG7x9+/Yp9GFuMl6/eqV2
-        cT8yMsJZ3TfS1Aaoj1knjVEkb7CnInYKPFGcydVqwJVA/3DW6XTOUCTpUhtfSjo/N/i/KZLyOYnpi4qK
-        mpGmNlibk5Svk5i+xMREXeskhsUZvV9C6y4tLY0TgVpBtu4eUyTl+0n37t0Tt27d0m4SUPaTHlKka6oO
-        rvrA9Hk8Hu06s3KQ9RpFSlJ57I7piomJEe/fvx+RLl3gG7tLVn4UnPVRamrqb9LUButGwc0PheeT8vPz
-        RWtra7Dmk9QsPgCr+SRzZla1pjhnZl0u12wQZ2aVFMlyZtbcMYzay5cv8zvKgDEXLS0twY5x+EdulcHN
-        mzf9YxzMnZVooT+CFfO9XTx69EgkJCSEIlpIqdy0JlroIMz1IpmGYeQkJSUFPfZ7K8zOzgqmY3h4OFRx
-        d//K7a6CD6SMu8uF+UGXtYbpMIxGFSJYb9++Heosves5KqAIVtOxslbmMX4AM/SoqqoSmZmZOsaCdwUc
-        C046nc6jqJ+eVFRUhCxH8Trl5eXi9OnTXFXxt3RrgTWrKo7C9NPDz+EjcBh0Z2dnB72Omp+fN6NV8WC4
-        IdDe+qSPaOn0EeAymIdc6dfb2wvX54fH4zFX+uE62tFmsy1hy6mIaJBraLkkk9yHW+PTwOYnjBWBHDzl
-        E+xHMd7gc4Ar07lmdv/+/RPR0dHrVhGEgoHA6nc+7gBfgV+D+yS3hlUCrAg4wVq73W6uPudY33YHZVnv
-        cO6KnVSHw/EuMjLyp6ysLCcOWV5zjyu0dG5GgHUV3+PwhO9xoGB8jwMHQvkeB1/9xfc40GanlMcpDDqn
-        PAEnsvh7c8hjj1vT0hkoAYbAMsKSAXwcEGT56gV5cBbk8v9+lL2/Yst5kb03omybwvgP9UvmXn/d0/gA
-        AAAASUVORK5CYII=
+        EwAACxMBAJqcGAAAB9RJREFUeF7tnH9MlHUcxx8I6Eih9ISAUWBAoWsWlcQatiELM5abIDOP48dYtZiC
+        gGIkTRSn/VpBM3651FjJVv9kSkzHcdxxgHIqgpKa2t2Bd5qSwAknhBz0/hwccceDIXE/tofP9uL5fD7P
+        3T3PfT7P9/f3YEZGRmYM5BmQDPaBStAM2oAKXAEtoNrR0bEYx3dBINvnzPFgWJ0PAvIESAMiLy+vFoFA
+        UFVaWnqgtrb2M41Gs72npycLr8vU6XTb1Gp1vkwm21dWVvZTYmJig4+Pzx94XwPIBAvMP3sOdlidbEDm
+        gzwnJ6dmoVBYKRKJ9uj1+ndw7iXgCXjgEeAA6D10dAbugEpQFF6fgaQdSkhIkPN4PAWfz9+9dOnS+Tg3
+        6XqWxihs5+wNVqc5kLUODg5ylIafFQpFOnyvgJkEl5L2NIhpb2//OiUl5Syqwsv4fD3Fi4MMT4jNlLA6
+        jUB44JugoKBTKAE74aPkPDrxNTOESpw3iJfL5T8GBwdfd3Z2LoXdDzghXV1drUuWLFEivmUw2WI0DquT
+        gFDbczQmJuaYVquNh8/D/DWzAFWRy3t7e79Yv379xdWrV58ZHh7ugY8Tgu96NzU19SS+dytiPWUbze5k
+        GD4QpaWlHUY7EgEfVVOsr50FqFT54oa3ZmVltYSHh5+H3gUfZ6SoqEgSGhpK1T4f5qQYTXaMVnHHN27c
+        eBj268Bx4nkLQZ0ML7AlPT39fGRkZCt0zlR9JAUFBdKIiAgavrjCNImPiWFwMExBXFxcJZ5mKkHGnpo1
+        oGv54Lq5qGLbd+3aJYXNKdm0aVMj4n8AqklsTA304gICAuQY6yTAtmQVNxVU9T2L6+/HfXRdu3btJGzO
+        CLVR6EzQRMA6mONx+VdhGHd0s8/U1dXlw7ZEJ2G6UGciEvch9vPz09CNw+aMUK/Py8vrNuUDpiEm48GB
+        7ExKSjoKfbnRZ0PoIckQCATq8vLyWuicktzcXBnysQeqIR6jf9DddnFxacUAMxP2bIyD/i9U7YWoVKqj
+        np6ef6E0caZbTjI0NHSDvjflBeZ4ktKFQuFx6DRYNQ+YrVgEMuPj42+JRCIJdE5JTk5OPfKSAXU8STVi
+        sfhz6DaZR5sC6risqKmpkWPsdBE6p6Szs/Mc8nIOKuWHWezt7d2GQauQHHZGAIr+wYULF/YPDg52wOaS
+        6H18fP5Efmg5iElBlVINpz10GMyhKm8LquI7crm8DjqnJDs7m6o8WodjikpKSr6H70nAFihbQqPvtYWF
+        haq9e/dyLklNTU11yM+3lKRfpVLpV/DR+IQtULbECYRLJJLWqKgomirilHR3d59Hfqg0Mc0dHR158Flj
+        ju5hoamiEKVSWY/6+QZ0TgnaY2qT1JSkS1qtNgc+tiDZA8vwRNXweDwddE4Jxod9bm5uvZQkNextgC1A
+        9sAyUI371OPIOcH3NvTBf0dJ+hi2NWe8pwvd04u4P6m7u7sWOqdkYklqQZv0KXy2mPX+L6idDMP9nfH3
+        978JnVMy1iZpKEkn0LvbD59hnsjOoHnEN9G7u7Jy5co26JySsd7dKUoShkklv8D3HGALlC2hB+e94uLi
+        W3l5eTLonJKxcdIhStL7GNHL4YsGbIGyJU+BL3F/fY2NjZwbzI5Nsn5ASQr09vbu0Ov1H8JvT+0StUch
+        uK8Tnp6eQwMDA0rYXBLj3F2QISCQBrFYXAF9Mdl2ghsQoD1ShoSEXIXOKTGZBTf8YZhMVCkt0GnbMC24
+        mQfM2lApoq3JZRs2bOirqqqy1HqS3Y692NaTaGVWia4u7aakdsA8aNaG1rViVCrVBT6ff9eCK7N2mSTW
+        lVmDwjC7k5OTL0BPAY8Z/TaAJlVpluG7pKQkXUVFhaX3OPw9drQb2bFjx+Q9DgZldLeQQiaTHYH9GrDF
+        hCvNMBg2STY0NKh8fX1vW2G3kF2Vpgm7hR6HaYiLSZAgsYGBgTe1Wu0+2P7AmlNFdC3qLMT29fXJcR/3
+        FQqFtfbd3R872lTogRzbdxcHczw2E4M06mCY4ri4uKt4A83n+QJrJIquQe3QKlz3WExMzL38/HxrD15t
+        XqKmtYPV4GAYVyDDG36DnQv8gCWrPkoQbQRcBY5kZ2dro6OjaQqIa3vBJdPeC064ubktQvt0OiMj4xKe
+        7N3wPQ8s0ZmgTgL9TmkdrlO5efNmbVhY2GXod+DjjEz4VQXt6ZgUp0kOI5AFQBIbG6tGG1UO31uAGvXZ
+        GEdRyaTq7QWwtb+//7RAILiHB0OGBHHy90kw2eJkgNVpBEI/gzkYFBTUXV9fT23ER+BVQJtWZjKFRAmm
+        zgFN5lLjWN7Y2KgKDg4exHXogpzC0dGRfoaqQRzYYjUOq9McyDo85e0YR91QKpW005WS9QYIBpQwqgqp
+        6qL2xdjRoCOVGFpuoEEZ9RZDQSLYr1ar21JSUvrmzZun8fDwMPkVwRymsDrZgLiBPc7Ozp1CobBTLBY3
+        6/X6H3BuO6DppEgQBmir8suA9vGtAG+DVFCI4l0tlUpVGKT2ubi4aF1dXT9Zs2YNlSzWa84xCqvzQUCo
+        raL/w9CMQdcAEtZVWlraIZFILmg0mpNov2iGQKzT6WSwz2JQehXnb1FiMDi9j/fRQha93x4XGe0SVud0
+        gdAWWNphSRv4aCrjOugCQ+AuoKXfJtS9B3GkdZG5/4jy0Iww/wDnxQDUeaGo6wAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
